fixed contract on iOS native

--- a/webprojects/app/_style/_iOS/margin.scss
+++ b/webprojects/app/_style/_iOS/margin.scss
@@ -2,12 +2,18 @@
 
 #view {
 	padding-top: 20px;
-}
-
-.split #view {
-	padding-top: 0px;
+	.split &, .secFAQ &, .ccPolicy & {
+		padding-top: 0px;
+	}
 }
 
 #header {
+	margin-top: 20px;
+	border-top: 0.05em solid #000;
+}
+
+#view .contract {
 	padding-top: 20px;
+	height: -webkit-calc(100% - 20px);
+	height: calc(100% - 20px);
 }
